App icon safari fixes

--- a/styles/global.css
+++ b/styles/global.css
@@ -23,14 +23,17 @@ ul.nav {
 }
 
 .filter-drop-shadow {
-  filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 0px 0.5em rgba(0, 0, 0, 0.1));
+  -webkit-filter: drop-shadow(0px 0px 0.5em rgba(0, 0, 0, 0.1));
 }
 .filter-drop-shadow-view {
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0px 0px 0.25em rgba(0, 0, 0, 0.1));
+  -webkit-filter: drop-shadow(0px 0px 0.25em rgba(0, 0, 0, 0.1));
 }
 
-.ars {
-  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
+.filter-drop-shadow-extended {
+  filter: drop-shadow(0px 0.25em 0.875em rgba(0, 0, 0, 0.1));
+  -webkit-filter: drop-shadow(0px 0.25em 0.875em rgba(0, 0, 0, 0.1));
 }
 
 .filter {
